--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.479.0",
     "moment": "^2.30.1",
-    "next": "15.2.2",
+    "next": "^16.0.10",
     "next-client-cookies": "^2.1.0",
     "openai": "^6.4.0",
     "prettier": "^3.5.3",
