--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@hookform/resolvers": "^5.2.2",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-avatar": "^1.1.10",
+    "@radix-ui/react-dialog": "^1.1.15",
     "@radix-ui/react-dropdown-menu": "^2.1.16",
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-slot": "^1.2.3",
@@ -47,6 +48,7 @@
     "react-hot-toast": "^2.6.0",
     "react-markdown": "^10.1.0",
     "react-zoom-pan-pinch": "^3.7.0",
+    "recharts": "^3.6.0",
     "remark-gfm": "^4.0.1",
     "swiper": "^12.0.2",
     "tailwind-merge": "^3.0.2",
