--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "moment": "^2.30.1",
     "next": "^16.0.10",
     "next-client-cookies": "^2.1.0",
+    "nextjs-toploader": "^3.9.17",
     "openai": "^6.4.0",
     "prettier": "^3.5.3",
     "prettier-plugin-tailwindcss": "^0.6.11",
