--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "framer-motion": "^12.23.9",
+    "html2canvas-pro": "^1.6.6",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^5.0.7",
     "lenis": "^1.3.11",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.479.0",
@@ -58,9 +61,7 @@
     "tailwindcss-animate": "^1.0.7",
     "webm-duration-fix": "^1.0.4",
     "zod": "^4.1.12",
-    "zustand": "^5.0.8",
-    "jspdf": "^2.5.2",
-    "html2canvas-pro": "^1.6.6"
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
     "@commitlint/cli": "^19.8.0",
